# disklens

./: .coverage  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt  run.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: actions.py  cache.py  duplicates.py  scanner.py  theme.py
src/views/: charts.py  duplist.py  largelist.py  treemap.py
tests/: conftest.py  test_actions.py  test_duplicates.py  test_duplicates_integration.py  test_scanner.py  test_scanner_integration.py  test_version.py
