[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "disklens"
version = "0.1.0"
description = "A high-performance disk space analyzer and cleanup utility with Windows safety guards."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "John Spencer", email = "sunman97@live.co.uk" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Utilities",
]
dependencies = [
    "squarify>=0.4",
    "matplotlib>=3.7",
    "send2trash>=1.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "types-send2trash",
    "python-semantic-release>=9.0.0",
]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
    "src/__init__.py:__version__",
]
branch = "main"
upload_to_release = true
build_command = "pip install build && python -m build"

[project.urls]
Homepage = "https://github.com/sunman97/disklens"
Issues = "https://github.com/sunman97/disklens/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# E: pycodestyle, F: Pyflakes, I: isort, UP: pyupgrade, B: flake8-bugbear, SIM: flake8-simplify, RUF: Ruff-specific
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src", "main.py"]

[[tool.mypy.overrides]]
module = "squarify.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing"
